fix bem-naming and text overflow

--- a/blocks/form-addImg.css
+++ b/blocks/form-addImg.css
@@ -1,4 +1,4 @@
-.form-addimg {
+.addimg {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -6,17 +6,17 @@
   display: none;
 }
 
-.form__profile:hover {
+.addimg:hover {
   cursor: pointer;
 }
 
-.form-addimage_is-opened {
+.addimage_is-opened {
   display: block;
   z-index: 1;
   pointer-events: auto;
 }
 
-.form-addimg__popup {
+.addimg__popup {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -27,10 +27,12 @@
   width: 430px;
   height: 330px;
   z-index: 2;
-  background-color: #ffffff;
+  background: #ffffff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
 }
 
-.form-addimg__Btn {
+.addimg__Btn {
   width: 358px;
   height: 50.15px;
 
@@ -39,7 +41,7 @@
   padding-bottom: 5px;
   border-radius: 2px;
 
-  font-family: "Inter";
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -53,30 +55,26 @@
   cursor: default;
 }
 
-.form-addimg__Btn_activa {
+.addimg__Btn_activa {
   background-color: #000000;
   cursor: pointer;
 }
 
-.form__submit:hover {
-  opacity: 0.8;
-}
-
 @media screen and (max-width: 984px) {
-  .form-addimg {
+  .addimg {
     position: fixed;
     width: 100vw;
     height: 100vh;
   }
 
-  .form-addimg__popup {
+  .addimg__popup {
     padding: 0;
     width: 282px;
     min-width: 282px;
     min-height: 322px;
   }
 
-  .form-addimg__Btn {
+  .addimg__Btn {
     width: 238px;
     min-width: 238px;
     min-height: 46px;
