--- a/blocks/form-profile.css
+++ b/blocks/form-profile.css
@@ -1,4 +1,4 @@
-.form-profile {
+.edit-profile {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -6,17 +6,17 @@
   display: none;
 }
 
-.form__profile:hover {
+.edit-profile:hover {
   cursor: pointer;
 }
 
-.form-profile_open {
+.edit-profile_open {
   display: block;
   z-index: 1;
   pointer-events: auto;
 }
 
-.form-profile__popup {
+.edit-profile__popup {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -27,9 +27,12 @@
   max-width: 430px;
   height: 330px;
   z-index: 2;
+  background: #ffffff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
 }
 
-.form-profile__btn {
+.edit-profile__btn {
   max-width: 358px;
   min-height: 50.15px;
 
@@ -52,30 +55,30 @@
   cursor: default;
 }
 
-.form-profile__btn_activa {
+.edit-profile__btn_activa {
   background-color: #000000;
   cursor: pointer;
 }
 
-.form-profile__btn:hover {
+.edit-profile__btn:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 984px) {
-  .form-profile {
+  .edit-profile {
     position: fixed;
     width: 100vw;
     height: 100vh;
   }
 
-  .form-profile__popup {
+  .edit-profile__popup {
     padding: 0;
     width: 282px;
     min-width: 282px;
     min-height: 322px;
   }
 
-  .form-profile__btn {
+  .edit-profile__btn {
     width: 238px;
     min-width: 238px;
     min-height: 46px;
