--- a/blocks/form.css
+++ b/blocks/form.css
@@ -2,12 +2,10 @@
   position: fixed;
   width: 430px;
   height: 330px;
-  background-color: white;
   border-radius: 30px;
   display: flex;
   flex-direction: column;
   gap: 30px;
-  background: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
