--- a/blocks/photos.css
+++ b/blocks/photos.css
@@ -52,7 +52,6 @@
 
 .photos__title {
   width: 195px;
-  margin-left: 21px;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 900;
