--- a/pages/index.css
+++ b/pages/index.css
@@ -7,7 +7,7 @@
 @import url(../blocks/img-popup.css);
 @import url(../blocks/form-profile.css);
 @import url(../blocks/form-addImg.css);
-
+@import url(../blocks/footer.css);
 
 @font-face {
   font-family: "Inter";
@@ -32,17 +32,14 @@
   font-weight: 900;
 }
 
-
 body {
   background-color: #000000;
-  -webkit-font-smoothing: antialiased;  
+  -webkit-font-smoothing: antialiased;
 }
 
-.body_bg {
-  background-image: url(../images/pictures/eltz-castle.jpg);
-
+.page {
+  max-width: 1280px;
 }
-
 
 @media screen and (max-width: 445px) {
   .page {
